add /count/variables endpoint; fix postgres list query
